<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_8">

    <ImageView
        android:id="@+id/moviePosterImageView"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_marginEnd="@dimen/dimen_8"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_poster" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_18sp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:text="@string/movie_title" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:text="@string/year" />

    </LinearLayout>
</LinearLayout>